2008-05-29  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Core/Banshee.ThickClient/Banshee.Addins.Gui/AddinTile.cs: Make some
	text translatable.

	* src/Core/Banshee.Services/Banshee.Preferences/Page.cs: Change "Manage
	Extensions" tab to "Extensions".

2008-05-29  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Core/Banshee.Services/Banshee.Sources/DatabaseSource.cs:
	* src/Core/Banshee.Services/Banshee.Sources/Source.cs:
	* src/Core/Banshee.Services/Banshee.Collection/AlbumListModel.cs:
	* src/Core/Banshee.Services/Banshee.Collection/TrackListModel.cs:
	* src/Core/Banshee.Services/Banshee.Collection/BansheeListModel.cs:
	* src/Core/Banshee.Services/Banshee.Collection.Database/DatabaseTrackListModel.cs:
	Remove a bunch of crufty code and replace a bunch of NIEXs with Log.Error.

2008-05-29  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Extensions/Banshee.Podcasting/Banshee.Podcasting/PodcastService.cs:
	Don't pulse the podcasts source when feeds are changes, just when items
	are added.

	* src/Libraries/Migo/Migo.Syndication/FeedUpdateTask.cs: If the feed
	hasn't been updated since we last checked, pass notify=false to feed.Save.

	* src/Libraries/Migo/Migo.Syndication/Feed.cs: Don't raise FeedsChanged
	when DownloadStatus set, just in Save and Delete.  Add override to Save
	that takes bool notify arg.

2008-05-29  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Core/Banshee.Services/Banshee.Sources/PrimarySource.cs: Don't throw
	an exception when CopyTo isn't implemented, but log a warning.

2008-05-29  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Core/Banshee.Services/Banshee.Playlist/AbstractPlaylistSource.cs:
	* src/Core/Banshee.Services/Banshee.Sources/DatabaseSource.cs: Move the
	NeedsReload methods into DatabaseSource so they can be used by
	PrimarySource and others.

	* src/Core/Banshee.Services/Banshee.Sources/PrimarySource.cs: Only reload
	when track(s) change if needed, otherwise just invalidate the cache.