@@ -1,3 +1,8 @@
+2008-05-30  Gabriel Burt  <gabriel.burt@gmail.com>
+
+	* src/Core/Banshee.Services/Banshee.Sources/PrimarySource.cs: Save and
+	restore the expanded state of all primary sources.
+
 2008-05-29  Gabriel Burt  <gabriel.burt@gmail.com>
 
 	* src/Core/Banshee.ThickClient/Banshee.Addins.Gui/AddinTile.cs: Make some
